test/simple/ill-typed/ho_fun_left.caprice
(* TEST
  include refutable;
*)


let f (g : int -> int) : bool -> int =
  g
